--- a/index.html
+++ b/index.html
@@ -162,115 +162,9 @@
         </section>
 
 
-<!--        education section-->
-        <section id="education">
-            <div>
-                <img id="section4colorboard" src="assets/images/Frame%2056.png" alt="lakshan">
-            </div>
-
-            <div>
-                <div>
-                    <h1>Education</h1>
-                    <h2>My Resume</h2>
-                </div>
-
-                <div>
-                    <hr>
-                    <div>
-                        <img src="assets/images/ball.png" />
-                        <img src="assets/images/Line%2018.png"/>
-                    </div>
-
-                    <h5>2007-2018</h5>
-                    <img width="50" src="assets/images/icons8-pass-fail-96.png" alt="lakshan">
-
-                    <h1>  G.C.E Ordinary Level Examination</h1>
-                     <h2>St. Thomas' College, Matara</h2>
-
-                </div>
-
-                <div>
-                    <hr>
-                    <div>
-                        <img src="assets/images/Line%2019.png" />
-                    </div>
-
-                    <img width="50" src="assets/images/icons8-examination-64.png" alt="lakshan">
-                    <h5>2018-2021</h5>
-
-                    <h1>G.C.E Advanced Level Examination</h1>
-                    <h2> St. Thomas' College, Matara</h2>
-
-                </div>
-
-                <div>
-
-                    <hr>
-                    <div>
-                        <img src="assets/images/Line%2018.png" />
-                    </div>
-
-                    <h5>2021-2024</h5>
-                    <img width="50" src="assets/images/icons8-diploma-94.png" alt="lakshan">
-
-                    <h1>Graduate Diploma in Software Engineering</h1>
-                    <h2>  Institute of Java Software Engineering</h2>
-
-                </div>
-
-                <div>
-                    <hr>
-                    <div>
-                        <img src="assets/images/Line%2019.png" />
-                    </div>
-
-                    <img width="50" src="assets/images/icons8-degree-94.png" alt="lakshan">
-                    <h5>2024-2025</h5>
-
-                    <h1>Software Engineering Degree</h1>
-                    <h2>Institute of Java Software Engineering</h2>
-
-                </div>
-
-                <div>
-                    <hr>
-                    <div>
-                        <img src="assets/images/ball.png" />
-                    </div>
-                </div>
-
-            </div>
-            </section>
-
-        <section>
-
-            <h5>Languages</h5>
-            <h1>What I Learnt</h1>
-
-            <img id="javaLogo" src="assets/images/Frame%205%20(1).png">
-
-            <img id="sqlLogo" src="assets/images/Frame%205%20(2).png">
-
-            <img id="jsLogo" src="assets/images/icons8-javascript-144%20(1).png">
-
-            <img id="cssLogo" src="assets/images/icons8-css-144%20(1).png">
-
-            <img id="htmlLogo" src="assets/images/icons8-html-144%20(1).png">
-
-            <img id="figmaLogo" src="assets/images/icons8-figma-144%20(1).png">
-
-            <img id="wordpressLogo" src="assets/images/icons8-wordpress-144%20(1).png">
-
-            <img id="arduinoLogo" src="assets/images/icons8-arduino-144%20(1).png">
-
-            <img id="hibernateLogo" src="assets/images/Hibernate.png">
-
-
-
-        </section>
-
-<!--        my expertise section-->
+        <!--        my expertise section-->
         <section id="expertise">
+            <dfn id="expertise-section"></dfn>
 
             <h5>My Expertise</h5>
             <h1>What Can I Do For Your Needs</h1>
@@ -279,46 +173,98 @@
 
 
             <div id="box1">
-                <img src="assets/images/design.png">
+                <img src="assets/images/expertise/web design.png"/>
                 <h4 style="width: 8vw;">web design</h4>
                 <h3>Develop any kind of web application either to conduct your business activities or to promote your business.</h3>
             </div>
 
 
             <div id="box2">
-                <img src="assets/images/application.png">
+                <img src="assets/images/expertise/Enterprise Application.png"/>
                 <h4 style="width: 16vw;">Enterprise Application</h4>
                 <h3>Create Modern Enterprise Application that reliable and consistency with awesome ideas.</h3>
             </div>
 
 
             <div  id="box3">
-                <img src="assets/images/design.png">
+                <img src="assets/images/expertise/ui ux design .png"/>
                 <h4 style="width: 15vw;">UI / UX Designing</h4>
                 <h3>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching colors.</h3>
             </div>
 
 
             <div   id="box4">
-                <img src="assets/images/cloud-data.png">
-                <h4 style="width: 12vw;">IOT Application<</h4>
+                <img src="assets/images/expertise/IOT Application.png"/>
+                <h4 style="width: 12vw;">IOT Application</h4>
                 <h3>Discover the Next Generation of the human world.</h3>
             </div>
 
 
             <div  id="box5">
-                <img src="assets/images/web-design.png">
+                <img src="assets/images/expertise/Graphic Designer.png"/>
                 <h4 style="width: 12vw;">Graphic Designer</h4>
                 <h3>The best designer can change everything in the artwork. I think graphic designers are like a magician in this field.</h3>
             </div>
 
 
             <div  id="box6">
-                <img src="assets/images/coding%20(1).png">
-                <h4 style="width: 18vw;">Software Development</h4>
-                <h3>Software Development Services means the design, development,maintenance,implementation.</h3>
+                <img src="assets/images/expertise/bug.png"/>
+                <h4 style="width: 8vw;">Bug Fixing</h4>
+                <h3>Once I have a clear understanding of the bug, I'll be able to help you with the implementation of the bug fix.</h3>
             </div>
         </section>
+
+
+        <!--        my expertise section-->
+<!--        <section id="expertise">-->
+
+<!--            <h5>My Expertise</h5>-->
+<!--            <h1>What Can I Do For Your Needs</h1>-->
+<!--            <p>Some understanding of software application concept, design,  evaluation and maintenance. To create software solutions for end users,-->
+<!--                software engineers have little understanding of their programming  languages</p>-->
+
+
+<!--            <div id="box1">-->
+<!--                <img src="assets/images/design.png">-->
+<!--                <h4 style="width: 8vw;">web design</h4>-->
+<!--                <h3>Develop any kind of web application either to conduct your business activities or to promote your business.</h3>-->
+<!--            </div>-->
+
+
+<!--            <div id="box2">-->
+<!--                <img src="assets/images/application.png">-->
+<!--                <h4 style="width: 16vw;">Enterprise Application</h4>-->
+<!--                <h3>Create Modern Enterprise Application that reliable and consistency with awesome ideas.</h3>-->
+<!--            </div>-->
+
+
+<!--            <div  id="box3">-->
+<!--                <img src="assets/images/design.png">-->
+<!--                <h4 style="width: 15vw;">UI / UX Designing</h4>-->
+<!--                <h3>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching colors.</h3>-->
+<!--            </div>-->
+
+
+<!--            <div   id="box4">-->
+<!--                <img src="assets/images/cloud-data.png">-->
+<!--                <h4 style="width: 12vw;">IOT Application<</h4>-->
+<!--                <h3>Discover the Next Generation of the human world.</h3>-->
+<!--            </div>-->
+
+
+<!--            <div  id="box5">-->
+<!--                <img src="assets/images/web-design.png">-->
+<!--                <h4 style="width: 12vw;">Graphic Designer</h4>-->
+<!--                <h3>The best designer can change everything in the artwork. I think graphic designers are like a magician in this field.</h3>-->
+<!--            </div>-->
+
+
+<!--            <div  id="box6">-->
+<!--                <img src="assets/images/coding%20(1).png">-->
+<!--                <h4 style="width: 18vw;">Software Development</h4>-->
+<!--                <h3>Software Development Services means the design, development,maintenance,implementation.</h3>-->
+<!--            </div>-->
+<!--        </section>-->
 
 <!--        project section-->
         <section id="projects">
