--- a/index.html
+++ b/index.html
@@ -215,58 +215,60 @@
         </section>
 
 
-        <!--        my expertise section-->
-<!--        <section id="expertise">-->
+        <!--        education section-->
+        <section id="education">
+            <dfn id="education-section"></dfn>
+            <div>
 
-<!--            <h5>My Expertise</h5>-->
-<!--            <h1>What Can I Do For Your Needs</h1>-->
-<!--            <p>Some understanding of software application concept, design,  evaluation and maintenance. To create software solutions for end users,-->
-<!--                software engineers have little understanding of their programming  languages</p>-->
+            </div>
+
+            <div>
+                <div>
+                    <h1>Education</h1>
+                    <h2>My Resume</h2>
+                </div>
+
+                <div>
+                    <h5>2007-2018</h5>
+                    <img src="assets/images/education/pass-fail.png"/>
+
+                    <h1>  G.C.E Ordinary Level Examination</h1>
+                    <h2>St. Thomas' College, Matara</h2>
+
+                </div>
+
+                <div>
+                    <img src="assets/images/education/examination.png"/>
+                    <h5>2018-2021</h5>
+
+                    <h1>G.C.E Advanced Level Examination</h1>
+                    <h2> St. Thomas' College, Matara</h2>
+
+                </div>
+
+                <div>
+                    <h5>2021-2024</h5>
+                    <img src="assets/images/education/diploma.png"/>
+
+                    <h1>Graduate Diploma in Software Engineering</h1>
+                    <h2>  Institute of Java Software Engineering</h2>
+
+                </div>
+
+                <div>
+                    <img src="assets/images/education/degree.png"/>
+                    <h5>2024-2025</h5>
+
+                    <h1>Software Engineering Degree</h1>
+                    <h2>Institute of Java Software Engineering</h2>
+
+                </div>
+
+            </div>
+        </section>
 
 
-<!--            <div id="box1">-->
-<!--                <img src="assets/images/design.png">-->
-<!--                <h4 style="width: 8vw;">web design</h4>-->
-<!--                <h3>Develop any kind of web application either to conduct your business activities or to promote your business.</h3>-->
-<!--            </div>-->
-
-
-<!--            <div id="box2">-->
-<!--                <img src="assets/images/application.png">-->
-<!--                <h4 style="width: 16vw;">Enterprise Application</h4>-->
-<!--                <h3>Create Modern Enterprise Application that reliable and consistency with awesome ideas.</h3>-->
-<!--            </div>-->
-
-
-<!--            <div  id="box3">-->
-<!--                <img src="assets/images/design.png">-->
-<!--                <h4 style="width: 15vw;">UI / UX Designing</h4>-->
-<!--                <h3>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching colors.</h3>-->
-<!--            </div>-->
-
-
-<!--            <div   id="box4">-->
-<!--                <img src="assets/images/cloud-data.png">-->
-<!--                <h4 style="width: 12vw;">IOT Application<</h4>-->
-<!--                <h3>Discover the Next Generation of the human world.</h3>-->
-<!--            </div>-->
-
-
-<!--            <div  id="box5">-->
-<!--                <img src="assets/images/web-design.png">-->
-<!--                <h4 style="width: 12vw;">Graphic Designer</h4>-->
-<!--                <h3>The best designer can change everything in the artwork. I think graphic designers are like a magician in this field.</h3>-->
-<!--            </div>-->
-
-
-<!--            <div  id="box6">-->
-<!--                <img src="assets/images/coding%20(1).png">-->
-<!--                <h4 style="width: 18vw;">Software Development</h4>-->
-<!--                <h3>Software Development Services means the design, development,maintenance,implementation.</h3>-->
-<!--            </div>-->
-<!--        </section>-->
-
-<!--        project section-->
+        <!--        project section-->
         <section id="projects">
             <h3>Projects and Assignments</h3>
             <h1>Projects work I do</h1>
