--- a/index.html
+++ b/index.html
@@ -219,7 +219,23 @@
         <section id="education">
             <dfn id="education-section"></dfn>
             <div>
-
+                <svg width="1136" height="742" viewBox="0 0 1136 742" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <ellipse cx="1070" cy="97" rx="20.8779" ry="20.8779" transform="rotate(6.16742 1070 97)" fill="#FAC921"/>
+                    <ellipse cx="82.9999" cy="647" rx="20.8779" ry="20.8779" transform="rotate(6.16742 82.9999 647)" fill="#FAC921"/>
+                    <ellipse cx="1070" cy="97.0002" rx="15.8166" ry="15.8166" transform="rotate(6.16742 1070 97.0002)" fill="#FCFCFC"/>
+                    <ellipse cx="82.9999" cy="647" rx="15.8166" ry="15.8166" transform="rotate(6.16742 82.9999 647)" fill="#FCFCFC"/>
+                    <ellipse cx="1070" cy="97" rx="9.48994" ry="9.48995" transform="rotate(6.16742 1070 97)" fill="#2D2D32"/>
+                    <ellipse cx="82.9999" cy="647" rx="9.48994" ry="9.48995" transform="rotate(6.16742 82.9999 647)" fill="#2D2D32"/>
+                    <path d="M127.993 97H1053" stroke="#FAC921" stroke-width="12"/>
+                    <line x1="128" y1="234.5" x2="1008" y2="234.5" stroke="#FAC921" stroke-width="12"/>
+                    <line x1="134" y1="371.5" x2="1014" y2="371.5" stroke="#FAC921" stroke-width="12"/>
+                    <path d="M133 509H1013" stroke="#FAC921" stroke-width="12"/>
+                    <path d="M103 646.5L1019 646.5" stroke="#FAC921" stroke-width="12"/>
+                    <path d="M132 97C132 97 60.0001 96.9696 60 167.577C59.9999 238.184 134 234.467 134 234.467" stroke="#FAC921" stroke-width="12"/>
+                    <path d="M134 371.5C134 371.5 60.0001 370.969 60 441.577C59.9999 512.184 133.5 509 133.5 509" stroke="#FAC921" stroke-width="12"/>
+                    <path d="M1013.5 371.5C1013.5 371.5 1083 370.607 1083 300C1083 229.393 1007.5 234.5 1007.5 234.5" stroke="#FAC921" stroke-width="12"/>
+                    <path d="M1018 646.582C1018 646.582 1087.5 645.69 1087.5 575.082C1087.5 504.475 1011 509 1011 509" stroke="#FAC921" stroke-width="12"/>
+                </svg>
             </div>
 
             <div>
