--- a/index.html
+++ b/index.html
@@ -283,6 +283,35 @@
             </div>
         </section>
 
+        <!--        Languages section-->
+
+        <section>
+
+            <h5>Languages</h5>
+            <h1>What I Learnt</h1>
+
+            <img id="javaLogo" src="assets/images/languages/Frame%205%20(1).png">
+
+            <img id="sqlLogo" src="assets/images/languages/Frame%205%20(2).png">
+
+            <img id="jsLogo" src="assets/images/languages/icons8-javascript-144%20(1).png">
+
+            <img id="cssLogo" src="assets/images/languages/icons8-css-144%20(1).png">
+
+            <img id="htmlLogo" src="assets/images/languages/icons8-html-144%20(1).png">
+
+            <img id="figmaLogo" src="assets/images/languages/icons8-figma-144%20(1).png">
+
+            <img id="wordpressLogo" src="assets/images/languages/icons8-wordpress-144%20(1).png">
+
+            <img id="arduinoLogo" src="assets/images/languages/icons8-arduino-144%20(1).png">
+
+            <img id="hibernateLogo" src="assets/images/languages/Hibernate.png">
+
+
+
+        </section>
+
 
         <!--        project section-->
         <section id="projects">
