--- a/index.html
+++ b/index.html
@@ -314,27 +314,33 @@
 
 
         <!--        project section-->
+
         <section id="projects">
-            <h3>Projects and Assignments</h3>
-            <h1>Projects work I do</h1>
+            <dfn id="project-section"></dfn>
+            <div>
+                <h1>Projects</h1>
+                <h2>MY Featured Projects and Assignments</h2>
+                <p>In this section I mention my specific featured projects. you can click that projects and go to that websites.
+                    and also you can go to the other project page click using the "My project and Assignments" button.
+                </p>
+                <h4><a href="assests/pages/assignmentPage.html" style="color: white">Projects and Assignments</a></h4>
+            </div>
 
-            <h2>Showing you the most valuable services available from us and the projects and Assignments  I have created</h2>
+            <div>
+                <img id="section6Project1" src="assets/images/project/Project3.png">
+                <img id="section6Project2" src="assets/images/project/Project2.png">
+                <img id="section6Project3" src="assets/images/project/Project1.png">
+            </div>
 
-<!--            <div></div>-->
-
-
-            <img id="section7Project1" src="assets/images/Project3.png">
-            <img id="section7Project2" src="assets/images/Project2.png">
-            <img id="section7Project3" src="assets/images/Project1.png">
-
-            <img id="section7LeftArrow" src="assets/images/Section7-LeftArrow.png">
-            <img id="section7RightArrow" src="assets/images/Section7-RightArrow.png">
-
-            <h4><a href="assests/pages/assignmentPage.html" style="color: white">Projects and Assignments</a></h4>
-
+            <div class="sp-cont sp-arr sp-cont-prev">
+                <i class="fa-solid fa-long-arrow-left"></i>
+            </div>
+            <div class="sp-cont sp-arr sp-cont-next">
+                <i class="fa-solid fa-long-arrow-right"></i>
+            </div>
         </section>
 
-<!--        blog section-->
+        <!--        blog section-->
         <section id="Blog">
 
                 <h5>Blog</h5>
