--- a/index.html
+++ b/index.html
@@ -467,8 +467,7 @@
 </head>
 
 <footer>
-    <section>
-
+    <div>
 
         <div>
             <h1>About Me</h1>
@@ -530,7 +529,7 @@
 
         </div>
 
-    </section>
+    </div>
 
 </footer>
 
