--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Signika&display=swap" rel="stylesheet">
 
+
+    <!-----------------------------------Section 1----------------------------------->
+    <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">
+
+
 </head>
 
 
