--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <!-----------------------------------Section 1----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">
+    <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">
 
 
 </head>
