--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-----------------------------------Section 1----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">
     <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">
+    <link rel="stylesheet" href="assets/css/Responsive425px/section3.css">
 
 
 </head>
