--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">
     <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">
     <link rel="stylesheet" href="assets/css/Responsive425px/section3.css">
+    <link rel="stylesheet" href="assets/css/Responsive425px/section4.css">
 
 
 </head>
