--- a/index.html
+++ b/index.html
@@ -182,42 +182,42 @@
 
             <div id="box1">
                 <img src="assets/images/expertise/web design.png"/>
-                <h4 style="width: 8vw;">web design</h4>
+                <h4>web design</h4>
                 <h3>Develop any kind of web application either to conduct your business activities or to promote your business.</h3>
             </div>
 
 
             <div id="box2">
                 <img src="assets/images/expertise/Enterprise Application.png"/>
-                <h4 style="width: 16vw;">Enterprise Application</h4>
+                <h4>Enterprise Application</h4>
                 <h3>Create Modern Enterprise Application that reliable and consistency with awesome ideas.</h3>
             </div>
 
 
             <div  id="box3">
                 <img src="assets/images/expertise/ui ux design .png"/>
-                <h4 style="width: 15vw;">UI / UX Designing</h4>
+                <h4>UI / UX Designing</h4>
                 <h3>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching colors.</h3>
             </div>
 
 
             <div   id="box4">
                 <img src="assets/images/expertise/IOT Application.png"/>
-                <h4 style="width: 12vw;">IOT Application</h4>
+                <h4>IOT Application</h4>
                 <h3>Discover the Next Generation of the human world.</h3>
             </div>
 
 
             <div  id="box5">
                 <img src="assets/images/expertise/Graphic Designer.png"/>
-                <h4 style="width: 12vw;">Graphic Designer</h4>
+                <h4>Graphic Designer</h4>
                 <h3>The best designer can change everything in the artwork. I think graphic designers are like a magician in this field.</h3>
             </div>
 
 
             <div  id="box6">
                 <img src="assets/images/expertise/bug.png"/>
-                <h4 style="width: 8vw;">Bug Fixing</h4>
+                <h4>Bug Fixing</h4>
                 <h3>Once I have a clear understanding of the bug, I'll be able to help you with the implementation of the bug fix.</h3>
             </div>
         </section>
