--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </section>
 
 
-                contact section
+<!--                contact section-->
 
         <section class="contact-section">
 
