--- a/index.html
+++ b/index.html
@@ -29,15 +29,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Signika&display=swap" rel="stylesheet">
 
 
+    <!-----------------------------------320px----------------------------------->
+    <link rel="stylesheet" href="assets/css/Responsive320px/section1.css">
+    <link rel="stylesheet" href="assets/css/Responsive320px/section2.css">
+
+
+
+
+
+
+
     <!-----------------------------------425px----------------------------------->
-    <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section3.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section4.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section6.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section7.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/section8.css">
-    <link rel="stylesheet" href="assets/css/Responsive425px/footer.css">
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section3.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section4.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section6.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section7.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section8.css">-->
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/footer.css">-->
+
 
 
 </head>
