--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <title>Lakshan R</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=yes,
-    initial-scale=1, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="HTML/icons8-l-64%20(1).png">
     <meta name="keywords" content="IJSE,GDSE,HTML,ABCD,Lakshan">
     <meta name="description" content="Nice to meet you, Lakshan Rashmika! As a software engineer, you can generate a placeholde">
@@ -32,11 +31,8 @@
     <!-----------------------------------320px----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive320px/section1.css">
     <link rel="stylesheet" href="assets/css/Responsive320px/section2.css">
-
-
-
-
-
+    <link rel="stylesheet" href="assets/css/Responsive320px/section3.css">
+    <link rel="stylesheet" href="assets/css/Responsive320px/section4.css">
 
 
     <!-----------------------------------425px----------------------------------->
