--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <link rel="stylesheet" href="assets/css/Responsive320px/section2.css">
     <link rel="stylesheet" href="assets/css/Responsive320px/section3.css">
     <link rel="stylesheet" href="assets/css/Responsive320px/section4.css">
+    <link rel="stylesheet" href="assets/css/Responsive320px/section6.css">
+    <link rel="stylesheet" href="assets/css/Responsive320px/section7.css">
+    <link rel="stylesheet" href="assets/css/Responsive320px/section8.css">
 
 
     <!-----------------------------------425px----------------------------------->
