--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Lakshan R</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=yes,
+    initial-scale=1, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="icon" href="HTML/icons8-l-64%20(1).png">
     <meta name="keywords" content="IJSE,GDSE,HTML,ABCD,Lakshan">
     <meta name="description" content="Nice to meet you, Lakshan Rashmika! As a software engineer, you can generate a placeholde">
@@ -36,6 +37,7 @@
     <link rel="stylesheet" href="assets/css/Responsive320px/section6.css">
     <link rel="stylesheet" href="assets/css/Responsive320px/section7.css">
     <link rel="stylesheet" href="assets/css/Responsive320px/section8.css">
+    <link rel="stylesheet" href="assets/css/Responsive320px/footer.css">
 
 
     <!-----------------------------------425px----------------------------------->
