--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="assets/font/fontawesome-free-6.4.2-web/css/all.css">
     <link rel="stylesheet" href="assets/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+<!--    <link rel="stylesheet" href="assets/css/styles.css">-->
 
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@900&display=swap" rel="stylesheet">
 
