--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
 
     <!-----------------------------------320px----------------------------------->
-    <link rel="stylesheet" href="assets/css/Responsive320px/section1.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section2.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section3.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section4.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section6.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section7.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/section8.css">
-    <link rel="stylesheet" href="assets/css/Responsive320px/footer.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section1.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section2.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section3.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section4.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section6.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section7.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/section8.css">
+    <link rel="stylesheet" href="assets/css/Responsive580px/footer.css">
 
 
     <!-----------------------------------425px----------------------------------->
@@ -212,7 +212,7 @@
 
 
             <div  id="box3">
-                <img src="assets/images/expertise/ui ux design .png"/>
+                <img src="assets/images/expertise/ui%20ux%20design%20.png"/>
                 <h4>UI / UX Designing</h4>
                 <h3>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching colors.</h3>
             </div>
