--- a/assignments/CSS/Animation/Case1/index.html
+++ b/assignments/CSS/Animation/Case1/index.html
@@ -3,27 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../../../assets/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
 
     <style>
-
-        section{
-            height: 100vh;
-            width: 100vw;
-            position: relative;
-        }
 
         section>div{
             height: 100px;
             width: 200px;
             border-radius: 20px;
             background-color: red;
-
             position: absolute;
-            /*top: 10vh;*/
-            /*left: 10vw;*/
             margin: auto;
-
             animation: anime;
             animation-duration: 10s;
             animation-iteration-count: infinite;
@@ -46,14 +35,14 @@
             }
 
             20%{
-                top:83vh;
+                top:75vh;
                 left: 83vw;
                 transform: rotate(0deg);
                 background-color: yellow;
             }
 
             30%{
-                top: 80vh;
+                top: 75vh;
                 left: 0;
                 transform: rotate(180deg);
                 background-color: green;
@@ -67,17 +56,17 @@
             }
 
             50%{
-                top: 83vh;
+                top: 75vh;
                 left: 0;
                 transform: rotate(180deg);
                 background-color: deeppink;
             }
 
             60%{
-                top: 83vh;
+                top: 75vh;
                 left: 83vw;
                 transform: rotate(0deg);
-                background-color: #ff1414;
+                background-color: #dd00ff;
             }
 
             70%{
