--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <p>In this section I mention my specific featured projects. you can click that projects and go to that websites.
                     and also you can go to the other project page click using the "My project and Assignments" button.
                 </p>
-                <h4><a href="assests/pages/assignmentPage.html" style="color: white">Projects and Assignments</a></h4>
+                <h4><a href="page/Assignment.html" style="color: white">Projects and Assignments</a></h4>
             </div>
 
             <div>
