--- a/index.html
+++ b/index.html
@@ -243,52 +243,36 @@
         <!--        education section-->
         <section id="education">
             <dfn id="education-section"></dfn>
-            <div>
+            <h5>Education</h5>
+            <h1>My Resume</h1>
 
-                <img src="assets/images/education/Frame 10 (2).png"/></div>
+            <img id="pathImg" src="assets/images/education/Frame%201%20(1).png">
 
-            <div>
-                <div>
-                    <h1>Education</h1>
-                    <h2>My Resume</h2>
-                </div>
+            <div id="section5Box1">
+                <h2 style="width: 13vw;">Software Engineering Degree</h2>
+                <h3 style="width: 15vw;">Institute of Java Software Engineering</h3>
+                <h4 style="width: 5vw;">2024 - 2025</h4>
+            </div>
 
-                <div>
-                    <h5>2007-2018</h5>
-                    <img src="assets/images/education/pass-fail.png"/>
 
-                    <h1>  G.C.E Ordinary Level Examination</h1>
-                    <h2>St. Thomas' College, Matara</h2>
+            <div id="section5Box2">
+                <h2 style="width: 14vw;">Graduate Diploma in Software Engineering</h2>
+                <h3 style="width: 15vw;">Institute of Java Software Engineering</h3>
+                <h4 style="width: 5vw;">2021 - 2024</h4>
+            </div>
 
-                </div>
 
-                <div>
-                    <img src="assets/images/education/examination.png"/>
-                    <h5>2018-2021</h5>
+            <div id="section5Box3">
+                <h2 style="width: 13vw;">G.C.E Advanced Level Examination</h2>
+                <h3 style="width: 12vw;">St. Thomas' College, Matara</h3>
+                <h4 style="width: 5vw;">2018 - 2021</h4>
+            </div>
 
-                    <h1>G.C.E Advanced Level Examination</h1>
-                    <h2> St. Thomas' College, Matara</h2>
 
-                </div>
-
-                <div>
-                    <h5>2021-2024</h5>
-                    <img src="assets/images/education/diploma.png"/>
-
-                    <h1>Graduate Diploma in Software Engineering</h1>
-                    <h2>  Institute of Java Software Engineering</h2>
-
-                </div>
-
-                <div>
-                    <img src="assets/images/education/degree.png"/>
-                    <h5>2024-2025</h5>
-
-                    <h1>Software Engineering Degree</h1>
-                    <h2>Institute of Java Software Engineering</h2>
-
-                </div>
-
+            <div id="section5Box4">
+                <h2 style="width: 13vw;">G.C.E Ordinary Level Examination</h2>
+                <h3 style="width: 12vw;">St. Thomas' College, Matara</h3>
+                <h4 style="width: 5vw;">2007 - 2018</h4>
             </div>
         </section>
 
