--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Signika&display=swap" rel="stylesheet">
 
 
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
+
     <!-----------------------------------320px----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive580px/section1.css">
     <link rel="stylesheet" href="assets/css/Responsive580px/section2.css">
@@ -94,68 +103,32 @@
             <div>
                 <aside>
                     <div>
-                        <p>Hello I'm</p>
+                        <h2>Hello I'm</h2>
                         <h1>Lakshan <span>Rashmika</span></h1>
-
-                        <div data-aos="zoom-in" data-aos-delay="1700" data-aos-duration="800"></div>
-                        <div data-aos="zoom-in" data-aos-delay="1700" data-aos-duration="800" style="left: 14.7vw; width: 1.5vw;"></div>
 
                         <img src="assets/images/home/icomoon_e64a(0)_64.png">
                         <p>
-                            I am currently studying for a software engineer<br>
-                            diploma at IJSE and I am also studying other subjects.<br>
+                            I am currently studying for a software engineer diploma at IJSE and I am also studying other subjects.
                             I am twenty one years old
                         </p>
 
                     </div>
 
-                    <!--                    <strong>good vibes only !</strong><br><br><br><br>-->
+                    <div class="btn-box">
+                        <a href="#about-section" class="btn">About Me</a>
+                        <span class="animate" style="--i:5;"></span>
+                    </div>
 
-                    <div>
-                        <h6 data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800"><a href="#aboutMe" style="color: white; text-decoration: none">About Me</a></h6>
+                    <div class="home-sci">
+                        <a href="https://www.facebook.com/lakshan.rashmika.925"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.instagram.com/lak_rashmika/"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.linkedin.com/in/lakshan-rashmika-4a7566249/"><i class='bx bxl-linkedin'></i></a>
+                        <span class="animate" style="--i:6;"></span>
                     </div>
 
                 </aside>
 
-
-                <ul>
-
-                    <a href="https://www.linkedin.com/in/lakshan-rashmika-4a7566249/" target="blank">
-                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="linkedIn" src="assets/images/home/linkedin.png" >
-                    </a>
-
-                    <a href="https://www.instagram.com/lak_rashmika/" target="blank">
-                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="instergram" src="assets/images/home/instagram.png" >
-                    </a>
-
-                    <a href="https://www.facebook.com/lakshan.rashmika.925" target="blank">
-                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="facebook" src="assets/images/home/facebook.png" >
-                    </a>
-
-                    <a href="https://discord.com/register" target="blank">
-                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="discord" src="assets/images/home/git%20hub.png" >
-                    </a>
-
-                </ul>
             </div>
-
-            <div>
-                <img src="assets/images/home/triangle1.png"  alt="taiangle">
-            </div>
-
-            <div>
-                <img src="assets/images/home/rawma.png"  alt="taiangle">
-            </div>
-
-            <div>
-                <img src="assets/images/home/triangle2.png" alt="taiangle">
-            </div>
-
-            <div>
-                <img src="assets/images/home/pluse.png" alt="taiangle">
-            </div>
-
-
         </section>
 
 
