--- a/index.html
+++ b/index.html
@@ -132,6 +132,220 @@
         </section>
 
 
+        <!--        my expertise section-->
+        <section id="expertise">
+            <dfn id="expertise-section"></dfn>
+
+            <h5>My Expertise</h5>
+            <h1>What Can I Do For Your Needs</h1>
+            <p>Some understanding of software application concept, design,  evaluation and maintenance. To create software solutions for end users,
+                software engineers have little understanding of their programming  languages</p>
+
+
+            <div class="col-md-1">
+                <div class="content-inner fl-wrap">
+
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <div class="overlay"></div>
+
+
+                            <div class="inner">
+                                <h2>Web Design</h2>
+
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">01.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/images/expertise/web%20design.png" alt="">
+                                </div>
+                                <p> Develop any kind of web application either to conduct your business activities or to promote your business.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-2">
+                <div class="content-inner fl-wrap">
+
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>Enterprise Application</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">02.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/images/expertise/Enterprise%20Application.png" alt="lakshan">
+                                </div>
+                                <p> Create Modern Enterprise Application that reliable and consistency with awesome ideas.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-md-3">
+                <div class="content-inner fl-wrap">
+
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>UI / UX Designing</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">03.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/images/expertise/ui-ux%20design.png" alt="lakshan">
+                                </div>
+                                <p>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching  colors.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="content-inner fl-wrap">
+
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>IOT Application</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">04.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/images/expertise/IOT%20Application.png" alt="lakshan">
+                                </div>
+                                <p> Discover the Next Generation of the human world.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-md-5">
+                <div class="content-inner fl-wrap">
+
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>Graphic Designing</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">05.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/images/expertise/graphic%20design.png" alt="lakshan">
+                                </div>
+                                <p> The best designer can change everything in the artwork. I think graphic designers are like a magician in this field. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="content-inner fl-wrap">
+
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>Bug Fixing</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">06.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/images/expertise/Bug Fixing.png" alt="lakshan">
+                                </div>
+                                <p>Once I have a clear understanding of the bug, I'll be able to help you with the implementation of the bug fix. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <!--        about me section-->
 
         <section id="aboutMe">
@@ -157,60 +371,13 @@
                 <img src="assets/images/about me/Frame 11.png" />
             </div>
 
+            <div class="about-btn-box">
+                <a class="btn" href="assets/pdf/Lakshan%20Rashmika.pdf" download="download_name">Download cv</a>
+                <span class="animate" style="--i:5;"></span>
+            </div>
+
         </section>
 
-
-        <!--        my expertise section-->
-        <section id="expertise">
-            <dfn id="expertise-section"></dfn>
-
-            <h5>My Expertise</h5>
-            <h1>What Can I Do For Your Needs</h1>
-            <p>Some understanding of software application concept, design,  evaluation and maintenance. To create software solutions for end users,
-                software engineers have little understanding of their programming  languages</p>
-
-
-            <div id="box1">
-                <img src="assets/images/expertise/web design.png"/>
-                <h4>web design</h4>
-                <h3>Develop any kind of web application either to conduct your business activities or to promote your business.</h3>
-            </div>
-
-
-            <div id="box2">
-                <img src="assets/images/expertise/Enterprise Application.png"/>
-                <h4>Enterprise Application</h4>
-                <h3>Create Modern Enterprise Application that reliable and consistency with awesome ideas.</h3>
-            </div>
-
-
-            <div  id="box3">
-                <img src="assets/images/expertise/ui%20ux%20design%20.png"/>
-                <h4>UI / UX Designing</h4>
-                <h3>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching colors.</h3>
-            </div>
-
-
-            <div   id="box4">
-                <img src="assets/images/expertise/IOT Application.png"/>
-                <h4>IOT Application</h4>
-                <h3>Discover the Next Generation of the human world.</h3>
-            </div>
-
-
-            <div  id="box5">
-                <img src="assets/images/expertise/Graphic Designer.png"/>
-                <h4>Graphic Designer</h4>
-                <h3>The best designer can change everything in the artwork. I think graphic designers are like a magician in this field.</h3>
-            </div>
-
-
-            <div  id="box6">
-                <img src="assets/images/expertise/bug.png"/>
-                <h4>Bug Fixing</h4>
-                <h3>Once I have a clear understanding of the bug, I'll be able to help you with the implementation of the bug fix.</h3>
-            </div>
-        </section>
 
 
         <!--        education section-->
