--- a/assignments/CSS/Transitions/Case3/index.html
+++ b/assignments/CSS/Transitions/Case3/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>transition case 3</title>
-    <link rel="stylesheet" href="../../../../assets/font/fontawesome-free-6.4.2-web/css/all.css">
     <link rel="stylesheet" href="../../../../assets/css/normalize.css">
     <style>
 
@@ -41,7 +40,7 @@
             background-size: cover;
         }
 
-        section>div:nth-child(1)>i{
+        section>div:nth-child(1)>img{
             width: max-content;
             height: max-content;
             font-size: 50px;
@@ -57,7 +56,7 @@
             top: -300px;
         }
 
-        section:hover div:first-child>i{
+        section:hover div:first-child>img{
             transition-duration: 1s;
             top: 120px;
             z-index: 10;
@@ -69,7 +68,7 @@
 <body>
     <section>
         <div>
-            <i class="fa-solid fa-trash-can"></i>
+            <img src="assets/image/icons8-delete-64 (1).png"/>
         </div>
         <div></div>
     </section>
