--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
     <link rel="stylesheet" href="assets/css/Responsive580px/section8.css">
     <link rel="stylesheet" href="assets/css/Responsive580px/footer.css">
 
+    <!-----------------------------------1024px----------------------------------->
+    <link rel="stylesheet" href="assets/css/Responsive1024px/section1.css">
+
 
     <!-----------------------------------425px----------------------------------->
-    <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">
+<!--    <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">-->
 <!--    <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">-->
 <!--    <link rel="stylesheet" href="assets/css/Responsive425px/section3.css">-->
 <!--    <link rel="stylesheet" href="assets/css/Responsive425px/section4.css">-->
