--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <header>
     <!--        header icon-->
     <div>
-        <img src="assets/images/Frame%2014%20(2).png" alt="header icon in hear">
+        <img src="assets/images/Frame%2015.png" alt="header icon in hear">
     </div>
     <!--        navigation-->
     <nav>
@@ -609,7 +609,7 @@
         <div>
             <h1>About Me</h1>
             <p>Software Engineer. Simultaneously studying a degree at London Met, with a focus on frames, is expected to be completed in 2026.</p>
-            <img src="assets/images/footer%20logo.png" />
+            <img src="assets/images/Frame%2017.png" />
 
             <hr>
         </div>
