--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                 <img src="assets/images/home/Frame 9.png" alt="lakshan"/>
             </div>
 
+            <div></div>
+
             <div>
                 <img src="assets/images/home/myImage.png" alt="myImage"/>
             </div>
@@ -133,6 +135,8 @@
                 </aside>
 
             </div>
+
+
         </section>
 
 
