--- a/index.html
+++ b/index.html
@@ -513,7 +513,15 @@
                     </div>
 
                     <div>
-                        <div><i id="phone" class="fa-solid fa-mobile-android"></i></div>
+                        <div class="wrapper">
+                            <div class="ring">
+                                <div class="coccoc-alo-phone coccoc-alo-green coccoc-alo-show">
+                                    <div class="coccoc-alo-ph-circle"></div>
+                                    <div class="coccoc-alo-ph-circle-fill"></div>
+                                    <div class="coccoc-alo-ph-img-circle"></div>
+                                </div>
+                            </div>
+                        </div>
                         <div>
                             <h4>01. Phone</h4>
                             <a href="tel:+94713988628">+(94)713988628</a>
