--- a/index.html
+++ b/index.html
@@ -529,7 +529,15 @@
                     </div>
 
                     <div>
-                        <div><i class="fa-solid fa-location-dot"></i></div>
+                        <div class="wrapper">
+                            <div class="ring">
+                                <div class="coccoc-alo-location coccoc-alo-green coccoc-alo-show">
+                                    <div class="coccoc-alo-lo-circle"></div>
+                                    <div class="coccoc-alo-lo-circle-fill"></div>
+                                    <div class="coccoc-alo-lo-img-circle"></div>
+                                </div>
+                            </div>
+                        </div>
 
                         <div>
                             <h4>03. Location</h4>
