--- a/index.html
+++ b/index.html
@@ -546,7 +546,15 @@
                     </div>
 
                     <div>
-                        <div><i class="fa-solid fa-envelope"></i></div>
+                        <div class="wrapper">
+                            <div class="ring">
+                                <div class="coccoc-alo-email coccoc-alo-green coccoc-alo-show">
+                                    <div class="coccoc-alo-em-circle"></div>
+                                    <div class="coccoc-alo-em-circle-fill"></div>
+                                    <div class="coccoc-alo-em-img-circle"></div>
+                                </div>
+                            </div>
+                        </div>
                         <div>
                             <h4>02. Email</h4>
                             <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"
